--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap'); */
 
 body {
   margin: auto;
